Correct overlapping image issue

--- a/css/styles.css
+++ b/css/styles.css
@@ -186,25 +186,25 @@ header img, footer img {
     padding: 5%;
     }
     
-    .about-section h2 {
+.about-section h2 {
     padding: 20px 0;
-    }
+}
     
-    .about-section img {
+.about-section img {
     border-radius: 20px;
     width: 100%;
-    }
+}
     
-    .history {
+.history {
     text-align: center;
     color: white;
     background-color: #CC66FF;
     border-radius: 20px;
     margin: 5%;
     padding: 10%;
-    }
+}
     
-    #readBtn {
+#readBtn {
     background-color: #0087DF;
     margin: 30px;
     font-family: niveau-grotesk, sans-serif;
@@ -213,70 +213,68 @@ header img, footer img {
     font-size: 20px;
     padding: 10px;
     border-radius: 8px;
-    }
+}
     
-    #more {
+#more {
     display: none;
-    }
+}
     
-    .who-we-are {
+.who-we-are {
     color: white;
     background-color: #6AD163;
     border-radius: 20px;
     margin: 5%;
     padding: 6% 3%;
     text-align: center;
-    }
+}
     
-    .people {
+.people {
     display: flex;
     flex-flow: row wrap;
     text-align: center;
     justify-content: center;
-    }
+}
     
-    
-    .people-profile {
+.people-profile {
     text-align: center;
     width: 100%;
-    max-width: 50%;
-    }
+}
     
-    .people-profile img {
+.people-profile img {
     max-width: 145px;
     margin: 5px;
     padding: 5px;
     border-radius: 10px;
-    }
+}
     
     
-    .people-profile p:first-of-type {
+.people-profile p:first-of-type {
     font-family: 'Poppins', sans-serif;
     font-weight: 600;
     font-style: normal;
     font-size: 0.7em;
-    }
+}
     
-    .people-profile p:last-of-type {
+.people-profile p:last-of-type {
     font-family: 'Poppins', sans-serif;
     font-weight: 400;
     font-style: italic;
     font-size: 0.6em;
-    }
+}
     
     
-    .goals {
+.goals {
     color: white;
     background-color: #0087DF;
     border-radius: 20px;
     margin: 5%;
     padding: 10%;
-    }
+}
     
-    .goals img {
+.goals img {
     width: 100%;
     margin: 5% 0;
-    }
+}
 
 /********************** Programs Page **********************/
 .activity-content {
@@ -598,6 +596,11 @@ footer ul li a, footer a {
         font-size: 1.3rem;
         width: 170px
       }
+    
+    .people-profile {
+        text-align: center;
+        width: 50%;
+    }
 }
 /* End 500 Min Width Media Query */
 /* Start 630 Min Width Media Query */
@@ -861,7 +864,7 @@ footer ul li a, footer a {
     }
     
     .people-profile img {
-        max-width: 175px;
+        max-width: 150px;
         margin: 10px;
         padding: 5px;
         border-radius: 10px;
